# miipher

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py  prepare_finetune_vocoder_dataset.py  preprocess.py  train.py
examples/configs/: config.yaml
examples/pretrained_models/EncoderClassifier-8f6f7fdaa9628acf73e21ad1f99d5f83/: hyperparams.yaml
scripts/: run_training.sh
src/miipher/: __init__.py  lightning_module.py
src/miipher/dataset/: datamodule.py  decoders.py  jvs_corpus.py  libritts.py  preprocess_for_infer.py
src/miipher/model/: miipher.py  modules.py
src/miipher/preprocess/: noiseAugmentation.py  preprocessor.py
tests/: test_models.py
